# notes-api

./: .gitignore  CLAUDE.md  README.md  notes.db  pom.xml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml
contracts/: notes-read.schema.json
decisions/: ADR-001-event-driven-notes-api.md  ADR-002-classification-writeback-contract.md  ADR-002-local-service-trust-boundary.md
docs/: 01-architecture.md  02-controllers.md  03-dtos.md  04-pom-and-maven.md  05-tags-and-collections.md  06-search-and-queries.md  07-testing.md  08-postgres-and-flyway.md  09-coverage.md  10-kafka-partitions-and-brokers.md  11-event-driven-architecture.md  README.md
docs/notes/: java-oop-and-ctors.md
local/: README.md  docker-compose.yml
scripts/: check_classify_contract.py  gen_contract_schema.py  lint_decisions.py
src/main/java/com/notes/api/: NotesApiApplication.java
src/main/java/com/notes/api/controller/: NoteController.java
src/main/java/com/notes/api/dto/: ClassificationRequest.java  NoteRequest.java  NoteResponse.java  TagsRequest.java
src/main/java/com/notes/api/event/: NoteCreated.java
src/main/java/com/notes/api/exception/: GlobalExceptionHandler.java  NoteNotFoundException.java
src/main/java/com/notes/api/model/: Note.java
src/main/java/com/notes/api/repository/: NoteRepository.java
src/main/java/com/notes/api/service/: NoteService.java
src/main/java/com/notes/api/smoke/: SmokeKafkaProducer.java
src/main/resources/: application-postgres.properties  application-smoke.properties  application.properties
src/main/resources/db/migration/: V1__create_notes_and_tags.sql
src/notes_api/: __init__.py  database.py  main.py  models.py  router.py  schemas.py  service.py  tasks.py  telemetry.py
src/test/java/com/notes/api/: NotesApiApplicationTests.java
src/test/java/com/notes/api/controller/: NoteControllerTest.java
src/test/java/com/notes/api/integration/: NoteEventPublishingIT.java
src/test/java/com/notes/api/repository/: NoteRepositoryTest.java
src/test/java/com/notes/api/service/: NoteServiceTest.java
tests/: conftest.py  test_contract_schema.py  test_notes.py  test_tasks.py  test_telemetry.py
