[project]
name = "notes-api"
version = "2.0.0"
description = "Personal notes REST API — Python/FastAPI"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.139.0",
    "uvicorn[standard]>=0.51.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "black>=24.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/notes_api"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
filterwarnings = [
    # starlette's TestClient prefers httpx2 over plain httpx and warns otherwise;
    # this app doesn't use httpx2 anywhere else, so mute this specific message
    # rather than take on a dependency with no functional use. Revisit if
    # starlette ever turns the fallback into a hard error instead of a warning.
    "ignore:Using `httpx` with `starlette.testclient` is deprecated:starlette.exceptions.StarletteDeprecationWarning",
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "D"]
# Trivial dunder methods don't need to restate what the signature already says.
ignore = ["D105", "D107"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D1"]

[tool.mypy]
python_version = "3.11"
strict = true
