[project]
name = "notes-api"
version = "2.0.0"
description = "Personal notes REST API — Python/FastAPI"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.139.2",
    "uvicorn[standard]>=0.51.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    # Observability: the enrichment task is instrumented against the OTel API
    # always; the SDK only records/exports when NOTES_API_TRACING is set (see
    # notes_api/telemetry.py), mirroring kb-agent and the classifier. API + SDK are
    # core so the no-op-when-disabled path works out of the box; the OTLP wire
    # exporter is the optional `otlp` extra below.
    "opentelemetry-api>=1.44.0",
    "opentelemetry-sdk>=1.20.0",
]

[project.optional-dependencies]
# Export spans to an OpenTelemetry collector over OTLP/HTTP. The console exporter
# (stderr) needs no infrastructure and is always available without this extra.
otlp = ["opentelemetry-exporter-otlp-proto-http>=1.20.0"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "black>=24.0.0",
    "ruff>=0.15.22",
    "mypy>=2.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/notes_api"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
filterwarnings = [
    # starlette's TestClient prefers httpx2 over plain httpx and warns otherwise;
    # this app doesn't use httpx2 anywhere else, so mute this specific message
    # rather than take on a dependency with no functional use. Revisit if
    # starlette ever turns the fallback into a hard error instead of a warning.
    "ignore:Using `httpx` with `starlette.testclient` is deprecated:starlette.exceptions.StarletteDeprecationWarning",
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "D"]
# Trivial dunder methods don't need to restate what the signature already says.
ignore = ["D105", "D107"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D1"]

[tool.mypy]
python_version = "3.11"
strict = true

[[tool.mypy.overrides]]
# The OTLP span exporter is an optional extra (`otlp`) and may be absent from the
# base env; its import in telemetry.py is already guarded by try/except
# ImportError at runtime, so let mypy tolerate the missing stub.
module = "opentelemetry.exporter.otlp.*"
ignore_missing_imports = true
